--- a/assets/css/one-page.css
+++ b/assets/css/one-page.css
@@ -11,6 +11,7 @@
 
 .btn-sub {
     border-radius: 0px;
+    margin-bottom: 5rem;
     color: white;
     background-color: #4a148c;
     padding: 10px 25px;
